--- a/case-study-1.html
+++ b/case-study-1.html
@@ -159,31 +159,31 @@
                     <p>July 2nd, 2024 – August 8th, 2024</p>
                 </div>
                 <div class="intro-image">
-                    <img src="assets/images/about/Food.png" alt="Lenovo Team Photo" />
+                    <img src="assets/images/about/Lenovointro.png" alt="Lenovo Team Photo" />
                 </div>
             </div>
         </section>
 
         <section id="lenovo-objectives" class="lenovo-section">
             <h2>Obectives</h2>
-          <h3>1) Cohesive Integration with Lenovo</h3>
+          <h3>🎯 Cohesive Integration with Lenovo</h3>
           <p>Align the Storage Central site with Lenovo.com for a cohesive experience and seamless integration.</p>
 
-          <h3>2) Enhanced User Experience and Design </h3>
+          <h3>🎯 Enhanced User Experience and Design </h3>
           <p>Enhance user experience by addressing key areas for improvement and elevating site layout and design.</p>
 
-          <h3>3) Optimized Accessibility and Usability</h3>
+          <h3>🎯 Optimized Accessibility and Usability</h3>
           <p>Focus on improving site navigation, readability, and user-friendly design to accommodate all users</p>
         </section>
     
         <section id="lenovo-agenda" class="lenovo-section">
             <h2>Agenda</h2>
-            <p><strong>1) Initial Research</strong></p>
-            <p><strong>2) User Needs and Personas</strong></p>
-            <p><strong>3) Site and Competitive Analysis</strong></p>
-            <p><strong>4) Goals and Actions</strong></p>
-            <p><strong>5) Wireframes</strong></p>
-            <p><strong>6) Conclusion</strong></p>
+            <p><strong>🔍Initial Research</strong></p>
+            <p><strong>👥User Needs and Personas</strong></p>
+            <p><strong>📊Site and Competitive Analysis</strong></p>
+            <p><strong>🎯Goals and Actions</strong></p>
+            <p><strong>🖥️Wireframes</strong></p>
+            <p><strong>🏁Conclusion</strong></p>
         </section>
     
         <section id="lenovo-research" class="lenovo-section">
