--- a/case-study-1.html
+++ b/case-study-1.html
@@ -364,34 +364,83 @@
             <p>➮ IBM excels in navigation and content organization with clean and well-structured UX</p>
             <p>➮ HPE stands out for its visually engaging design and effective use of imagery</p>
             <p>➮ Dell has strong accessibility and SEO performance but struggles with content flow</p>
-            <p>➮ Lenovo's strengths lie in branding consistency and dropdown navigation, but it faces challengeswith cluttered layouts and inconsistent design elements</p>
+            <p>➮ Lenovo's strengths lie in branding consistency and dropdown navigation, but it faces challenges with cluttered layouts and inconsistent design elements</p>
             <p>➮ Overall, while each competitor has its strengths, there are clear opportunities for Lenovo to improve in areas like visual consistency, content clarity, and user navigation</p>
+        
+            <!-- Image Section -->
+            <div style="text-align: center; margin-top: 20px;">
+                <img src="assets/images/about/Companal.png" alt="Competitive Analysis Image" style="max-width: 100%; height: auto;">
+            </div>
+        </section>
 
+        <section id="lenovo-goals" class="lenovo-section">
+            <h2>Redesign Goals </h2>
+            <p>➮ IBM excels in navigation and content organization with clean and well-structured UX</p>
+            <p>➮ HPE stands out for its visually engaging design and effective use of imagery</p>
+            <p>➮ Dell has strong accessibility and SEO performance but struggles with content flow</p>
+            <p>➮ Lenovo's strengths lie in branding consistency and dropdown navigation, but it faces challenges with cluttered layouts and inconsistent design elements</p>
+            <p>➮ Overall, while each competitor has its strengths, there are clear opportunities for Lenovo to improve in areas like visual consistency, content clarity, and user navigation</p>
+        
+            <!-- Image Section -->
+            <div style="text-align: center; margin-top: 20px;">
+                <img src="assets/images/about/Companal.png" alt="Competitive Analysis Image" style="max-width: 100%; height: auto;">
+            </div>
+        </section>
 
-
-
-
-
+        <section id="lenovo-goals" class="lenovo-section">
+            <h2>Redesign Goals </h2>
+            <h3>🎯Seamless Lenovo.com Integration</h3>
+            <p><strong>Goal:</strong> Ensure that the Storage Central site integrates smoothly with Lenovo.com to provide a unified user experience.</p>
+            <h3>🎯Improved Content Distribution and Clarity </h3>
+            <p><strong>Goal:</strong> Enhance content organization and readability.</p>
+            <h3>🎯Consistent and Engaging Visual Design</h3>
+            <p><strong>Goal:</strong> Create a cohesive and visually appealing design that aligns with Lenovo’s branding.</p>
+            <h3>🎯Enhanced Accessibility</h3>
+            <p><strong>Goal:</strong> Ensure the site meets accessibility standards and performs well across devices.</p>
         </section>
 
 
-
-
-
-
-
+        <section id="lenovo-actions" class="lenovo-section">
+            <h2>Redesign Actions </h2>
+            <h3>✅Seamless Lenovo.com Integration</h3>
+            <p><strong>Action:</strong> Align design elements and
+                content structure of Storage Central with
+                Lenovo.com. Implement unified design to
+                create a cohesive experience.</p>
+            <h3>✅Improved Content Distribution and Clarity </h3>
+            <p><strong>Action:</strong>Refine content layout with clear
+                headings, effective use of white space,
+                and well-placed CTAs. Ensure content is
+                concise to improve comprehension.</h3>
+            <h3>✅Consistent and Engaging Visual Design</h3>
+            <p><strong>Action:</strong> Standardize typography, improve image
+                quality, and ensure consistent use of colors and
+                branding elements. Address design
+                inconsistencies to enhance overall visual appeal.</p>
+            <h3>✅Enhanced Accessibility</h3>
+            <p><strong>Action:</strong> Address accessibility issues such as
+                color contrast (and alt text if possible in later
+                development process). </p>
+        </section>
 
 
         <section id="homepage-wireframe" class="lenovo-section">
             <h2>Wireframes</h2>
             <h3>Homepage Updates</h3>
-            <p>➮ Aligned layout with Lenovo.com’s structure and components to ensure seamless integration</p>
-            <p>➮ Introduced a site overview section to clearly communicate Lenovo’s ISG capabilities (placeholder text shown)</p>
-            <p>➮ Structured content flow to emphasize key partnerships and educational resources</p>
+            <p>➮ Aligned layout with Lenovo.com’s structure and components
+                to ensure seamless integration</p>
+            <p>➮ Introduced a site overview section to clearly communicate
+                Lenovo’s ISG capabilities (placeholder text shown)
+                </p>
+            <p>➮ Structured content flow to emphasize key partnerships and
+                educational resources</p>
             <p>➮ Incorporated prominent CTAs for intuitive user engagement</p>
-            <p>➮ Replaced outdated and irrelevant imagery with visuals that resonate with the content.</p>
-            <p>➮ Utilized white space to improve overall user experience</p>
+            <p>➮ Replaced outdated and irrelevant imagery with visuals that
+                resonate with the content.</p>
+            <p>➮ Utilized white space to improve overall user experience
+            </p>
         </section>
+
 
         <section id="topics-wireframe" class="lenovo-section">
             <h2>Wireframes</h2>
@@ -430,18 +479,6 @@
             <p>➮ Explore different types of in-page navigation that could benefit not only Storage Central, but all of Lenovo.com (sidebar nav, accordion menus, etc)</p>
         </section>
     </body>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
