--- a/case-study-1.html
+++ b/case-study-1.html
@@ -177,13 +177,16 @@
         </section>
     
         <section id="lenovo-agenda" class="lenovo-section">
-            <h2>Agenda</h2>
-            <p><strong>🔍Initial Research</strong></p>
-            <p><strong>👥User Needs and Personas</strong></p>
-            <p><strong>📊Site and Competitive Analysis</strong></p>
-            <p><strong>🎯Goals and Actions</strong></p>
-            <p><strong>🖥️Wireframes</strong></p>
-            <p><strong>🏁Conclusion</strong></p>
+            <div class="agenda-content">
+                <div class="agenda-text">
+                    <h2>Agenda</h2>
+                    <p><strong>🔍Initial Research</strong></p>
+                    <p><strong>👥User Needs and Personas</strong></p>
+                    <p><strong>📊Site and Competitive Analysis</strong></p>
+                    <p><strong>🎯Goals and Actions</strong></p>
+                    <p><strong>🖥️Wireframes</strong></p>
+                    <p><strong>🏁Conclusion</strong></p>
+                </div>
         </section>
     
         <section id="lenovo-research" class="lenovo-section">
