--- a/case-study-1.html
+++ b/case-study-1.html
@@ -287,8 +287,6 @@
 
 
 
-
-
         <section id="lenovo-analysis" class="lenovo-section">
             <h2>Storage Central Site Analysis</h2>
             <h3>🧭Navigation and Structure</h3>
@@ -430,20 +428,20 @@
         <section id="homepage-wireframe" class="lenovo-section">
             <h2>Wireframes</h2>
             <h3>Homepage Updates</h3>
-            <p>➮ Aligned layout with Lenovo.com’s structure and components
-                to ensure seamless integration</p>
-            <p>➮ Introduced a site overview section to clearly communicate
-                Lenovo’s ISG capabilities (placeholder text shown)
-                </p>
-            <p>➮ Structured content flow to emphasize key partnerships and
-                educational resources</p>
-            <p>➮ Incorporated prominent CTAs for intuitive user engagement</p>
-            <p>➮ Replaced outdated and irrelevant imagery with visuals that
-                resonate with the content.</p>
-            <p>➮ Utilized white space to improve overall user experience
-            </p>
+            <div class="content-and-image">
+                <div class="text-content">
+                    <p>➮ Aligned layout with Lenovo.com’s structure and components to ensure seamless integration</p>
+                    <p>➮ Introduced a site overview section to clearly communicate Lenovo’s ISG capabilities (placeholder text shown)</p>
+                    <p>➮ Structured content flow to emphasize key partnerships and educational resources</p>
+                    <p>➮ Incorporated prominent CTAs for intuitive user engagement</p>
+                    <p>➮ Replaced outdated and irrelevant imagery with visuals that resonate with the content.</p>
+                    <p>➮ Utilized white space to improve overall user experience</p>
+                </div>
+                <div class="image-container">
+                    <img src="assets/images/about/Homepage.png" alt="Homepage wireframe" class="wireframe-image" />
+                </div>
+            </div>
         </section>
-
 
         <section id="topics-wireframe" class="lenovo-section">
             <h2>Wireframes</h2>
