--- a/case-study-1.html
+++ b/case-study-1.html
@@ -120,11 +120,30 @@
 								.deleteChars(6)
 								.typeString('Research')
 								.pauseFor(20)
-								.deleteAll()
-								.pauseFor(20)
-								.deleteChars(8)
+								.deleteChars(11)
 								.typeString('Web Design')
+                                .pauseFor(20)
+								.deleteChars(10)
+								.typeString('Wireframing')
+                                .pauseFor(20)
+								.deleteChars(11)
+								.typeString('Prototyping')
+                                .pauseFor(20)
+								.deleteChars(11)
+								.typeString('Information Architecture')
+                                .pauseFor(20)
+								.deleteChars(26)
+								.typeString('Competitive Analysis')
+                                .pauseFor(20)
+								.deleteChars(21)
+								.typeString('Responsive Design')
+                                .pauseFor(20)
+								.deleteChars(18)
+								.typeString('Content Strategy')
+                                .pauseFor(20)
+								.deleteChars(16)
 								.start();
+                                
 						</script>
 						<br>
 
