--- a/case-study-1.html
+++ b/case-study-1.html
@@ -5,7 +5,7 @@
     <!-- meta data -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!--font-family-->
@@ -14,7 +14,7 @@
         rel="stylesheet">
 
     <!-- title of site -->
-    <title>Lenovo Storage Central Website Redesign</title>
+    <title>Lenovo Case Study</title>
 
     <!-- For favicon png -->
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
@@ -280,7 +280,7 @@
                 </div>
                 <div class="right-column">
                     <h3>🔒Data Security & Efficient Management</h3>
-                    <p>Clear solutions for safeguarding data against security threats.</p>
+                    <p>Comprehensive and clear solutions for safeguarding sensitive data against a wide range of security threats.</p>
         
                     <h3>📈Support for Informed Decision-Making</h3>
                     <p>Detailed, in-depth information to aid ITDMs and C-suite executives in their purchasing decisions.</p>
