--- a/case-study-3.html
+++ b/case-study-3.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
 
     <!-- title of site -->
-    <title>Case Study 1</title>
+    <title>TPL Case Study</title>
 
     <!-- For favicon png -->
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png" />
@@ -78,7 +78,6 @@
                             <li class=" smooth-menu active"></li>
                             <li class="smooth-menu"><a href="index.html#about">about</a></li>
                             <li class="smooth-menu"><a href="index.html#work">work</a></li>
-                            <li class="smooth-menu"><a href="#play">play</a></li>
                             <li class="smooth-menu"><a href="index.html#experience">experience</a></li>
                             <li class=" smooth-menu"><a href="index.html#education">education</a></li>
                             <li class="smooth-menu"><a href="index.html#contact">contact</a></li>
@@ -138,65 +137,54 @@
     </section>
 
 
-   <!--about start -->
-	<section id="about" class="about">
-		<div class="section-heading text-center">
-			<h2>Project Overview</h2>
-		</div>
-		<div class="container">
-			<div class="about-content">
-				<div class="row">
-					<div class="col-sm-6">
-						<div class="single-about-txt">
-							<h3>
-								Welcome to my digital sandbox!⛱️ I'm a UX designer & researcher passionate about enhancing the human experience through thoughtful designs. Right now, I'm diving into user research at Lenovo, crafting solutions at the MSU Burgess Institute, and uncovering insights at Spartie VR Lab.
-							</h3>
-							<p>
-								Currently pursuing my Master's in Human Computer Interaction at Michigan State University, I'm deepening my expertise in user research and design. With a graduation date set for May 2025, I bring a diverse background in UX design & research, marketing design, graphic design, and game design to the table. I’m excited to collaborate with teams that are shaping the future of technology and creating experiences that make a positive impact. I’m always excited to connect with others who share a passion for design. If you're looking to collaborate, exchange ideas, or connect, <a href="#contact" style="color:#8E3965; text-decoration: underline;">feel free to reach out</a> – I’d love to hear from you!
-							</p>
+   
+ <!--MAIN BULK-->
+ <section id="painters-intro" class="lenovo-section">
+    <div class="painters-intro-content">
+        <div class="painters-intro-text">
+            <h2>Introduction</h2>
+            <h3>👩‍💻Role</h3>
+            <p>UX and UI Designer</p>
 
-						</div>
-					</div>
-					<div class="col-sm-offset-1 col-sm-5">
-						<div class="single-about-img">
-							<img src="assets/images/about/headshot.jpg" alt="Mikayla's Headshot Photo">
-							<div class="about-list-icon">
-								<ul>
-									<li>
-										<a href="mailto: mikaylaslavin4@gmail.com">
-											<i class="fa fa-envelope" aria-hidden="true" style="margin-left: 5px;"></i>
-										</a>
+            <h3>🤝Team</h3>
+            <p>Side Tracked Studios</p>
 
-									</li><!-- / li -->
-									<li>
-										<a href="tel:+19062046226">
-											<i class="fa fa-phone" aria-hidden="true"></i>
-										</a>
-
-									</li><!-- / li -->
-									<li>
-										<a href="https://www.linkedin.com/in/mikaylaslavin/">
-											<i class="fa fa-linkedin" aria-hidden="true"></i>
-										</a>
-									</li><!-- / li -->
-									<li>
-										<a href="https://github.com/mikaylaslavin">
-											<i class="fa fa-github" aria-hidden="true"></i>
-										</a>
-									</li><!-- / li -->
+            <h3>📅Duration</h3>
+            <p>August, 2024 – December, 2024</p>
+        </div>
+        <div class="painters-intro-image">
+            <img src="assets/images/about/" alt="The Painter's Lament Wireframe" />
+        </div>
+    </div>
+</section>
 
 
-								</ul><!-- / ul -->
-							</div><!-- /.about-list-icon -->
+<section id="painters-objectives" class="lenovo-section">
+    <div class="painters-intro-content">
+        <div class="painters-intro-text">
+            <h2>Objectives</h2>
+            <h3>👩‍💻Role</h3>
+            <p>UX and UI Designer</p>
 
-						</div>
+            <h3>🤝Team</h3>
+            <p>Side Tracked Studios</p>
 
-					</div>
-				</div>
-			</div>
-		</div>
-	</section><!--/.about-->
-	<!--about end -->
+            <h3>📅Duration</h3>
+            <p>August, 2024 – December, 2024</p>
+        </div>
+        <div class="painters-objectives-image">
+            <img src="assets/images/about/" alt="The Painter's Lament Wireframe" />
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+
 
     <!--footer-copyright start-->
     <footer id="footer-copyright" class="footer-copyright">
