--- a/case-study-1.html
+++ b/case-study-1.html
@@ -61,7 +61,7 @@
             <!-- Start Navigation -->
             <nav class="navbar navbar-default bootsnav navbar-fixed dark no-background">
 
-                <div class="container">
+                <div class="container-fluid">
 
                     <!-- Start Header Navigation -->
                     <div class="navbar-header">
