--- a/case-study-3.html
+++ b/case-study-3.html
@@ -163,26 +163,17 @@
     <div class="painters-intro-content">
         <div class="painters-intro-text">
             <h2>Objectives</h2>
-            <h3>👩‍💻Role</h3>
-            <p>UX and UI Designer</p>
-
-            <h3>🤝Team</h3>
-            <p>Side Tracked Studios</p>
-
-            <h3>📅Duration</h3>
-            <p>August, 2024 – December, 2024</p>
-        </div>
-        <div class="painters-objectives-image">
-            <img src="assets/images/about/" alt="The Painter's Lament Wireframe" />
+            <h3>🎯 Cohesive Integration with Lenovo</h3>
+            <p>Align the Storage Central site with Lenovo.com for a cohesive experience and seamless integration.</p>
+  
+            <h3>🎯 Enhanced User Experience and Design </h3>
+            <p>Enhance user experience by addressing key areas for improvement and elevating site layout and design.</p>
+  
+            <h3>🎯 Optimized Accessibility and Usability</h3>
+            <p>Focus on improving site navigation, readability, and user-friendly design to accommodate all users</p>
         </div>
     </div>
 </section>
-
-
-
-
-
-
 
 
 
