--- a/case-study-3.html
+++ b/case-study-3.html
@@ -153,7 +153,7 @@
             <p>August, 2024 – December, 2024</p>
         </div>
         <div class="painters-intro-image">
-            <img src="assets/images/about/" alt="The Painter's Lament Wireframe" />
+            <img src="assets/images/about/TPLintro.png" alt="The Painter's Lament Wireframe" />
         </div>
     </div>
 </section>
