--- a/case-study-3.html
+++ b/case-study-3.html
@@ -284,9 +284,16 @@
             <p>➮ Allows interaction with selected items through Examine, Combine, Use, and Exit options.</p>
           </div>
         </div>
+  
+        <!-- Image at the bottom center -->
+        <div class="image-wrapper">
+          <img src="assets/images/about/Lowfiwireframes.png" alt="Wireframe Design" class="wireframe-image">
+        </div>
+  
       </div>
     </div>
   </section>
+  
   
   <section id="painters-wireframes" class="lenovo-section">
     <div class="painters-intro-content">
