--- a/case-study-3.html
+++ b/case-study-3.html
@@ -314,6 +314,14 @@
             <p>The inventory is housed within a large watercolor Victorian frame. The items are displayed in a square grid, each individual square shaded in blue tones. The items themselves follow the Victorian and watercolor-inspired style. The top of the screen features the word “inventory” in the same handwritten font used for the letters found throughout the game, further enhancing thematic consistency. Following the same design principles as the inventory screen, the pop-up features a new frame that appears in front of the main inventory screen, allowing players to interact with individual items.</p>
           </div>
         </div>
+
+ <!-- Image at the bottom center -->
+ <div class="image-wrapper">
+    <img src="assets/images/about/Hifiwireframes.png" alt="Wireframe Design" class="wireframe-image">
+  </div>
+
+
+
       </div>
     </div>
   </section>
