--- a/case-study-3.html
+++ b/case-study-3.html
@@ -196,6 +196,27 @@
     </div>
 </section>
 
+
+<section id="painters-objectives" class="lenovo-section">
+    <div class="painters-intro-content">
+        <div class="painters-intro-text">
+            <h2>Objectives</h2>
+            <h3>🎯 Intuitive Navigation</h3>
+            <p>Design a user interface that allows players to easily navigate through menus, settings, and gameplay without distractions, ensuring the experience is smooth and accessible.
+            </p>
+  
+            <h3>🎯 Artistic Integration </h3>
+            <p>Align the UI design with the game’s Victorian Gothic and watercolor art styles, ensuring that visual elements support the tone and atmosphere without overshadowing the gameplay.</p>
+  
+            <h3>🎯 Accessibility</h3>
+            <p>Incorporate accessibility features such as customizable text sizes, color-blind modes, and clear, legible fonts, ensuring the game is playable and enjoyable for a wide range of players.</p>
+        </div>
+        <div class="painters-intro-image">
+            <img src="assets/images/about/TPLintro.png" alt="The Painter's Lament Wireframe" />
+        </div>
+    </div>
+</section>
+
 <section id="painters-agenda" class="lenovo-section">
     <h2>Agenda</h2>
     <div class="content-wrapper">
@@ -394,6 +415,12 @@
 
           </div>
         </div>
+
+        <!-- Image at the bottom center -->
+ <div class="image-wrapper">
+    <img src="assets/images/about/Logosheet.png" alt="Wireframe Design" class="logo-image">
+  </div>
+
       </div>
     </div>
   </section>
