--- a/case-study-3.html
+++ b/case-study-3.html
@@ -228,16 +228,14 @@
             <h3>Target Audience</h3>
             <p>➮ Conducted secondary research on player preferences, focusing on usability, customization, and aesthetics to align design with user expectations.</p>
             <h3>Accessibility & Inclusivity</h3>
-            <p>➮ Reviewed accessibility guidelines to ensure the game accommodates diverse player needs, including visual, auditory, and cognitive accessibility features.
-            </p>
-        
+            <p>➮ Reviewed accessibility guidelines to ensure the game accommodates diverse player needs, including visual, auditory, and cognitive accessibility features.</p>
         </div>
         <div class="research-image">
-            <img src="assets/images/about/" alt="Research Image" />
+            <img src="assets/images/about/Researchpic.png" alt="Research Image" class="research-img">
         </div>
     </div>
-    </div>
 </section>
+
 
 <section id="painters-researchfindings" class="lenovo-section">
     <h2>Key Insights</h2>
