--- a/case-study-3.html
+++ b/case-study-3.html
@@ -230,11 +230,12 @@
             <h3>Accessibility & Inclusivity</h3>
             <p>➮ Reviewed accessibility guidelines to ensure the game accommodates diverse player needs, including visual, auditory, and cognitive accessibility features.</p>
         </div>
-        <div class="research-image">
-            <img src="assets/images/about/Researchpic.png" alt="Research Image" class="research-img">
-        </div>
+    </div>
+    <div class="research-image">
+        <img src="assets/images/about/.png" alt="Research Image" />
     </div>
 </section>
+
 
 
 <section id="painters-researchfindings" class="lenovo-section">
