--- a/case-study-3.html
+++ b/case-study-3.html
@@ -230,11 +230,18 @@
             <h3>Accessibility & Inclusivity</h3>
             <p>➮ Reviewed accessibility guidelines to ensure the game accommodates diverse player needs, including visual, auditory, and cognitive accessibility features.</p>
         </div>
-    </div>
-    <div class="research-image">
-        <img src="assets/images/about/.png" alt="Research Image" />
+        <div class="research-image-container">
+            <img src="assets/images/about/TPLresearchpic.png" alt="Research Image" />
+            <div class="button-wrapper">
+                <a href="https://docs.google.com/presentation/d/1Hb5jFmmEXkCsU4PG3iSoy3gSUaAuNlcAfEeXnKxJMdY/edit?usp=sharing" target="_blank">
+                <button>View all Research (Slide 70)</button>
+            </div>
+        </div>
     </div>
 </section>
+
+
+
 
 
 
