--- a/case-study-3.html
+++ b/case-study-3.html
@@ -243,8 +243,6 @@
 
 
 
-
-
 <section id="painters-researchfindings" class="lenovo-section">
     <h2>Key Insights</h2>
     <div class="content-wrapper">
@@ -374,7 +372,13 @@
         <p>➮ Adorned in Victorian-era attire, complete with intricate detailing that reflects the period’s aesthetic, the clothing design emphasizes authenticity while remaining cohesive with the game’s art style.</p>
       </div>
     </div>
-  </section>
+
+    <!-- Add image here -->
+    <div class="image-container">
+        <img src="assets/images/about/visualidentity.png" alt="Visual Identity Example" class="responsive-image">
+    </div>
+</section>
+
 
   <section id="painters-logo" class="lenovo-section">
     <div class="painters-intro-content">
@@ -407,8 +411,6 @@
 
           </div>
         </div>
-
-        <!-- Image at the bottom center -->
  <div class="image-wrapper">
     <img src="assets/images/about/Logosheet.png" alt="Wireframe Design" class="logo-image">
   </div>
