--- a/case-study-3.html
+++ b/case-study-3.html
@@ -443,7 +443,20 @@
         <p>The design ensured clarity by presenting key points in a digestible format, with minimal text and strong visuals that helped convey design decisions effectively.</p>
       </div>
     </div>
-  </section>
+
+    <!-- Add image here -->
+    <div class="image-container">
+        <img src="assets/images/about/Presentation.png" alt="Presentation Design Example" class="responsive-image">
+    </div>
+
+    <!-- Add button here -->
+    <div class="button-wrapper">
+        <button onclick="window.location.href='https://docs.google.com/presentation/d/1Hb5jFmmEXkCsU4PG3iSoy3gSUaAuNlcAfEeXnKxJMdY/edit?usp=sharing';">View Presentation</button>
+    </div>
+</section>
+
+
+
 
 <section id="painters-conclusion" class="lenovo-section">
     <div class="painters-intro-content">
