--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
 							<li class=" smooth-menu active"></li>
 							<li class="smooth-menu"><a href="#about">about</a></li>
 							<li class="smooth-menu"><a href="#work">work</a></li>
-							<li class="smooth-menu"><a href="#play">play</a></li>
 							<li class="smooth-menu"><a href="#experience">experience</a></li>
 							<li class=" smooth-menu"><a href="#education">education</a></li>
 							<li class="smooth-menu"><a href="#contact">contact</a></li>
@@ -266,7 +265,7 @@
 </section>
 <!--portfolio end -->
 
-<section id="play" class="play">
+<section id="play" class="play" style="display:none;">
     <div class="portfolio-details">
         <div class="section-heading text-center">
             <h2>Play </h2>
@@ -275,7 +274,6 @@
             <div class="portfolio-content">
                 <div class="isotope">
                     <div class="row">
-
                         <div class="col-sm-6">
                             <div class="item">
                                 <img src="assets/images/about/Travel.png" alt="portfolio image" />
@@ -294,7 +292,6 @@
                                 </div><!-- /.isotope-overlay -->
                             </div><!-- /.item -->
                         </div><!-- /.col -->
-
                         <div class="col-sm-6">
                             <div class="item">
                                 <img src="assets/images/about/Food.png" alt="portfolio image" />
