--- a/case-study-2.html
+++ b/case-study-2.html
@@ -78,7 +78,6 @@
                             <li class=" smooth-menu active"></li>
                             <li class="smooth-menu"><a href="index.html#about">about</a></li>
                             <li class="smooth-menu"><a href="index.html#work">work</a></li>
-                            <li class="smooth-menu"><a href="#play">play</a></li>
                             <li class="smooth-menu"><a href="index.html#experience">experience</a></li>
                             <li class=" smooth-menu"><a href="index.html#education">education</a></li>
                             <li class="smooth-menu"><a href="index.html#contact">contact</a></li>
@@ -138,65 +137,85 @@
     </section>
 
 
-   <!--about start -->
-	<section id="about" class="about">
-		<div class="section-heading text-center">
-			<h2>Project Overview</h2>
-		</div>
-		<div class="container">
-			<div class="about-content">
-				<div class="row">
-					<div class="col-sm-6">
-						<div class="single-about-txt">
-							<h3>
-								Welcome to my digital sandbox!⛱️ I'm a UX designer & researcher passionate about enhancing the human experience through thoughtful designs. Right now, I'm diving into user research at Lenovo, crafting solutions at the MSU Burgess Institute, and uncovering insights at Spartie VR Lab.
-							</h3>
-							<p>
-								Currently pursuing my Master's in Human Computer Interaction at Michigan State University, I'm deepening my expertise in user research and design. With a graduation date set for May 2025, I bring a diverse background in UX design & research, marketing design, graphic design, and game design to the table. I’m excited to collaborate with teams that are shaping the future of technology and creating experiences that make a positive impact. I’m always excited to connect with others who share a passion for design. If you're looking to collaborate, exchange ideas, or connect, <a href="#contact" style="color:#8E3965; text-decoration: underline;">feel free to reach out</a> – I’d love to hear from you!
-							</p>
+   <!--Main Bulk -->
+   <head>
+    <style>
+        #campus-intro .campus-intro-text p {
+            font-size: 16px !important;
+            font-weight: 500 !important;
+            margin-bottom: 15px !important;
+        }
 
-						</div>
-					</div>
-					<div class="col-sm-offset-1 col-sm-5">
-						<div class="single-about-img">
-							<img src="assets/images/about/headshot.jpg" alt="Mikayla's Headshot Photo">
-							<div class="about-list-icon">
-								<ul>
-									<li>
-										<a href="mailto: mikaylaslavin4@gmail.com">
-											<i class="fa fa-envelope" aria-hidden="true" style="margin-left: 5px;"></i>
-										</a>
+        #campus-overview h2 {
+    font-size: 28px;
+    font-weight: bold;
+    color: #FF5E5E;
+    margin-bottom: 15px;
+}
+    </style>
+</head>
 
-									</li><!-- / li -->
-									<li>
-										<a href="tel:+19062046226">
-											<i class="fa fa-phone" aria-hidden="true"></i>
-										</a>
+<body>
+    <section id="campus-intro" class="campus-case-study lenovo-section">
+        <div class="campus-intro-content">
+            <div class="campus-intro-text">
+                <h2>Introduction</h2>
+                <h3>👩‍💻Role</h3>
+                <p>UX Designer</p>
 
-									</li><!-- / li -->
-									<li>
-										<a href="https://www.linkedin.com/in/mikaylaslavin/">
-											<i class="fa fa-linkedin" aria-hidden="true"></i>
-										</a>
-									</li><!-- / li -->
-									<li>
-										<a href="https://github.com/mikaylaslavin">
-											<i class="fa fa-github" aria-hidden="true"></i>
-										</a>
-									</li><!-- / li -->
+                <h3>🤝Team</h3>
+                <p>Independent Project</p>
+
+                <h3>📅Duration</h3>
+                <p>February, 2024 – May, 2024</p>
+            </div>
+        </div>
+    </section>
+</body>
+
+<section id="campus-overview" class="lenovo-section">
+    <h2>Overview</h2>
+    <div class="content-wrapper">
+      <div class="left-column">
+        <h3>🌐Site Background</h3>
+        <p>The Storage Central website serves as an educational platform for Lenovo's Infrastructure Solutions Group, aimed at IT Decision Makers and Infrastructure Managers. It provides access to resources such as webinars, security solutions, and storage management tools. However, the site suffers from design inconsistencies and a cluttered user experience, limiting its effectiveness in communicating Lenovo's capabilities and engaging users.</p>
+
+      </div>
+  
+      <div class="right-column">
+        <h3>⚠️Problem Statement</h3>
+        <p>The Storage Central website suffers from a cluttered layout, inconsistent design, and poor integration with Lenovo.com, resulting in a <strong>fragmented user experience</strong>. Key design elements do not align with Lenovo’s main website, creating a <strong>disjointed experience for users</strong>. A redesign is needed to <strong>improve navigation, visual consistency, and accessibility</strong> while ensuring seamless alignment with Lenovo.com <strong>for a unified user experience</strong>.</p>
+  
+    
+      </div>
+    </div>
+  </section>
 
 
-								</ul><!-- / ul -->
-							</div><!-- /.about-list-icon -->
 
-						</div>
 
-					</div>
-				</div>
-			</div>
-		</div>
-	</section><!--/.about-->
-	<!--about end -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!--footer-copyright start-->
     <footer id="footer-copyright" class="footer-copyright">
